<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/appBackgroundColor"
    tools:context=".invoice.sub_item.InvoiceSubItemActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/screen_content_spacing"
            android:layout_marginEnd="@dimen/screen_content_spacing"
            android:layout_marginBottom="@dimen/screen_content_spacing">


            <!--Stock Name -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStockNameInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/stock_name"
                    android:focusable="false"
                    android:drawableEnd="@drawable/down_arrow"
                    android:maxLength="300" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--Location -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocationInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/location"
                    android:focusable="false"
                    android:drawableEnd="@drawable/down_arrow"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Project/Shop -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etProjectShopInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/project_shop"
                    android:focusable="false"
                    android:drawableEnd="@drawable/down_arrow"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Specification -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSpecificationInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/specification"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Description -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescriptionInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>


            <!-- Qty -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etQtyInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/qty"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Unit -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUnitInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/unit"
                    android:inputType="text"
                    android:focusable="false"
                    android:drawableEnd="@drawable/down_arrow"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- U.P -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUPInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/u_p"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Discount -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDiscountInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/discount"
                    android:maxLength="5" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--NP -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNPInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/np"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Line Total -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLineTotalInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/line_total"
                    android:inputType="number"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Stockout date -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStockoutdateInv"
                    style="@style/styleTextInputEditText"
                    android:hint="@string/stockout_date"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddInv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CommonButton"
                android:layout_marginTop="@dimen/screen_content_spacing"
                android:text="@string/btn_add"/>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>